[metadata]
name = junk_drawer
version = 0.1.0
description = collection of random python tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nebko16/junk_drawer
author = Nebko16
author_email = nebko16@gmail.com
license = GPL-3.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
python_requires = >=3.9
package_dir =
    = src
packages = find:
optional_dependencies =
    submodule = ['asyncio>=3.4.3']

[options.extras_require]
submodule =
    asyncio>=3.4.3
